# markovpass

./: .gitignore  Cargo.toml  LICENSE  README.md  README.rst
.github/workflows/: build.yml  ci.yml  release.yml
pkg/: call-of-cthulu.txt  my-man-jeeves.txt  pride-and-prejudice.txt
src/: alias_dist.rs  args.rs  corpus.rs  lib.rs  main.rs  markovchain.rs
src/lib/: .corpus.rs.swn  alias_dist.rs  corpus.rs  error.rs  errors.rs  markovchain.rs  mod.rs
