[package]
name = "markovpass"
version = "2.0.1"
authors = ["Julian Andrews <jandrews271@gmail.com>"]
license = "BSD-3-Clause"
description = "Markov chain based passphrase generator"
readme = "README.md"
repository = "https://github.com/julianandrews/markovpass"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
directories = "4.0.1"
rand = "0.8.5"
rand_distr = "0.4.3"

[features]
benchmarks = []

[profile.release]
strip = "symbols"

[package.metadata.deb]
extended-description = """\
A markov chain based passphrase generator.

Generates randomized passphrases based on a Markov chain along with the \
total Shannon entropy of the nodes traversed. Long random sequences of \
characters are difficult to remember. Shorter, or less random sequences \
are bad passphrases. Long sequences of words (xkcd style passphrases) \
are relatively easy to remember but take a long time to type.  Markovpass \
generates human sounding phrases, which aim to strike a balance between \
ease of memorization, length, and passphrases quality. The passphrases \
produced look something like:

    soluttingle misfy curther requenturn

or:

    beforeing licting stroducted shall

By default, markovpass is distributed with a corpus of public domain \
selections from Jane Austen, H.P. Lovecraft, and P.G. Wodehouse. See \
the builtin help for information on customizing your corpus."""
assets = [
    ["target/release/markovpass", "/usr/bin/", "755"],
    ["README.md", "/usr/share/doc/markovpass/", "644"],
    ["pkg/*", "/usr/share/markovpass/", "644"],
]
